move author list and date to right sidebar

--- a/site/_components/app-info.njk
+++ b/site/_components/app-info.njk
@@ -9,8 +9,8 @@
 <figure class="app-info">
   <img class="app-info__logo" src="{{app.logo}}" aria-hidden="true" alt="" />
   <figcaption class="app-info__copy-wrapper">
-    <p class="type--h5">{{app.name}}</p>
-    <p class="app-info__company">{{app.company}}</p>
+    <p class="type--h6">{{app.name}}</p>
+    <p class="type--small">{{app.company}}</p>
   </figcaption>
 </figure>
 {%- endmacro %}
