--- a/site/_components/authors-list.njk
+++ b/site/_components/authors-list.njk
@@ -7,7 +7,8 @@
   @param {string} microcopy.author.alt - String to describe the author's photo
 
  #}-->
-{% from 'author.njk' import author as authorMacro %} {% macro authorsList(authors, contributors, microcopy) -%}
+{% from 'author.njk' import author as authorMacro %} {% macro authorsList(label, authors, contributors, microcopy) -%}
+<span class="authors-list__label type--label">{{ label }}</span>
 <ul class="authors-list">
   {% for author in authors %}
   <li class="authors-list__author">{{authorMacro(contributors[author], microcopy.author.alt, author)}}</li>
