--- a/site/sass/components/_authors-list.scss
+++ b/site/sass/components/_authors-list.scss
@@ -1,9 +1,24 @@
 // Styles for authors list info used in news and stories.
 .authors-list {
+  $block-padding: 1.25rem;
+
   list-style: none;
-  margin: pxRem(24px) 0;
+  margin: 0.5rem 0 1.5rem;
+
+  @include mq($bkpt-articles--3-cols) {
+    padding-left: $block-padding;
+  }
 
   &__author {
     margin-bottom: 1rem;
+  }
+
+  &__label {
+    color: var(--grey-500);
+    display: block;
+
+    @include mq($bkpt-articles--3-cols) {
+      padding-left: $block-padding;
+    }
   }
 }
