--- a/site/sass/components/_app-info.scss
+++ b/site/sass/components/_app-info.scss
@@ -5,9 +5,11 @@
   $logo-size: pxRem(80px);
 
   display: flex;
+  margin-bottom: 2rem;
 
-  @include mq($bkpt-articles--2-cols) {
+  @include mq($bkpt-articles--3-cols) {
     flex-direction: column;
+    padding-left: 1.25rem;
   }
 
   &__logo {
@@ -22,7 +24,7 @@
     justify-content: center;
     margin-left: pxRem(24px);
 
-    @include mq($bkpt-articles--2-cols) {
+    @include mq($bkpt-articles--3-cols) {
       margin-left: 0;
       margin-top: pxRem(24px);
     }
