Add documentation for background shape effect

--- a/site/_generated/style-guide.njk
+++ b/site/_generated/style-guide.njk
@@ -22,6 +22,9 @@ permalink: '{{ l10n.locale.code | slug }}/style-guide/index.html'
       <li>
         <a href="{{page.url}}typography" class="type--link">{{l10n.microcopy.styleGuide.typography}}</a>
       </li>
+      <li>
+        <a href="{{page.url}}shapes" class="type--link">{{l10n.microcopy.styleGuide.shapes}}</a>
+      </li>
     </ul>
   </article>
 </div>
