--- a/site/sass/globals/extends/_type.scss
+++ b/site/sass/globals/extends/_type.scss
@@ -145,6 +145,14 @@
     }
   }
 
+  &--lower {
+    text-transform: lowercase;
+  }
+
+  &--upper {
+    text-transform: uppercase;
+  }
+
   &--kbd {
     background-color: var(--grey-100);
     border-radius: pxRem(3px);
