clean up image class

--- a/site/_layouts/tech-detail.njk
+++ b/site/_layouts/tech-detail.njk
@@ -11,7 +11,7 @@ layout: _wrapper
   <div class="tech-detail__hero">
     <h1 class="tech-detail__hero-title type--mega">{{title}}</h1>
     {%- if hero -%}
-    <img class="tech-detail__hero-image tech-detail__hero-image--right" src="{{hero.image}}" alt="{{hero.alt}}" />
+    <img class="tech-detail__hero-image tech-detail__hero-image" src="{{hero.image}}" alt="{{hero.alt}}" />
     {%- endif -%}
   </div>
   {% endif %} {% if landingPage == false %}
