--- a/site/sass/layouts/_tech-detail.scss
+++ b/site/sass/layouts/_tech-detail.scss
@@ -87,7 +87,7 @@
       @include mq($bkpt-tech-details--landing) {
         height: 24rem;
         object-fit: none;
-        object-position: 0 50%;
+        object-position: right;
         width: 100%;
       }
     }
