wrap cite in footer

--- a/site/_components/community-quotes.njk
+++ b/site/_components/community-quotes.njk
@@ -35,10 +35,12 @@
       <figcaption class="community-quotes__caption">
         <blockquote class="community-quotes__block">
           <p class="type--h4">{{quote.content.copy}}</p>
-          <cite class="community-quotes__citation type--caption">
-            <span class="community-quotes__author">{{quote.content.author.name}}</span>
-            {{quote.content.author.role}}
-          </cite>
+          <footer>
+            <cite class="community-quotes__citation type--caption">
+              <span class="community-quotes__author">{{quote.content.author.name}}</span>
+              {{quote.content.author.role}}
+            </cite>
+          </footer>
         </blockquote>
       </figcaption>
     </figure>
