💎(site) Routing Cards (#340)
* routing card component, color stop wrapper

* use container query, add polyfill, update linting rules

--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -15,6 +15,9 @@ hideNewsletter: true
   <!-- Hero Animation -->
   <header id="home__hero" class="wrapper wrapper--full-bleed wrapper--no-bottom wrapper--no-top">{{ heroAnimated(l10n.home.hero.heading, l10n.home.hero.cta, l10n.home.hero.img) }}</header>
 
+  <!-- Routing Cards -->
+  <div id="home__routing" class="wrapper wrapper--full-bleed wrapper--no-top wrapper--padding wrapper--padded wrapper__contained wrapper__background--color-stop">{{ itemGrid('', l10n.home.routing.items, l10n.home.routing.modifiers, l10n.locale.code) }}</div>
+
   <!-- Linux -->
   <section id="home__linux" class="wrapper wrapper--padded wrapper--padding">{{ fiftyFifty(l10n.home.linux.content, l10n.home.linux.cta, l10n.home.linux.images, l10n.locale.code) }}</section>
 
