--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -83,6 +83,7 @@
 @import 'components/pagination';
 @import 'components/page-not-found';
 @import 'components/pwa-checklist';
+@import 'components/community-quotes';
 @import 'components/card-routing';
 @import 'components/fifty-fifty';
 
