--- a/site/_generated/news.njk
+++ b/site/_generated/news.njk
@@ -13,9 +13,7 @@ metadesc: Get the latest news, stories, resource articles, and case studies for 
 
 <div class="wrapper--hidden-x">
   <!-- Featured Post -->
-  {% if landingCollections.featured.post %}
-  <div class="wrapper wrapper--padded" aria-label="{{l10n.news.hero.desc}}">{{ hero(landingCollections.featured.post) }}</div>
-  {% endif %}
+  {% if landingCollections.featured.post %} {{ hero(landingCollections.featured.post) }} {% endif %}
 
   <!-- Posts -->
   {% if landingCollections.filteredPosts.length > 0 %}
