change span to h4 and add grey 200 variable

--- a/site/_components/authors-list.njk
+++ b/site/_components/authors-list.njk
@@ -8,10 +8,12 @@
 
  #}-->
 {% from 'author.njk' import author as authorMacro %} {% macro authorsList(label, authors, contributors, microcopy) -%}
-<span class="authors-list__label type--label">{{ label }}</span>
-<ul class="authors-list">
-  {% for author in authors %}
-  <li class="authors-list__author">{{authorMacro(contributors[author], microcopy.author.alt, author)}}</li>
-  {% endfor %}
-</ul>
+<section>
+  <h4 class="authors-list__label type--label">{{ label }}</h4>
+  <ul class="authors-list">
+    {% for author in authors %}
+    <li class="authors-list__author">{{authorMacro(contributors[author], microcopy.author.alt, author)}}</li>
+    {% endfor %}
+  </ul>
+</section>
 {%- endmacro %}
