--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -200,6 +200,10 @@
       background-color: var(--grey-850);
     }
 
+    &--light {
+      background-color: var(--yellow-50);
+    }
+
     &--color-stop {
       background: var(--secondary-blue);
       position: relative;
