💎(site) Add New Design to Article Page Right Sidebar (#349)
* type small should have color grey

* add border left to toc and fix spacing

* move author list and date to right sidebar

* adding authors to if statement

* change span to h4 and add grey 200 variable

* add heading and sections

* changes to toc border left

* remove comment

* Update site/sass/components/_toc.scss

Co-authored-by: Sam Richard <snugug@google.com>

Co-authored-by: Sam Richard <snugug@google.com>

--- a/site/_components/authors-list.njk
+++ b/site/_components/authors-list.njk
@@ -7,10 +7,13 @@
   @param {string} microcopy.author.alt - String to describe the author's photo
 
  #}-->
-{% from 'author.njk' import author as authorMacro %} {% macro authorsList(authors, contributors, microcopy) -%}
+{% from 'author.njk' import author as authorMacro %} {% macro authorsList(label, authors, contributors, microcopy) -%}
+
+<h4 class="authors-list__label type--label">{{ label }}</h4>
 <ul class="authors-list">
   {% for author in authors %}
   <li class="authors-list__author">{{authorMacro(contributors[author], microcopy.author.alt, author)}}</li>
   {% endfor %}
 </ul>
+
 {%- endmacro %}
