--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -35,7 +35,7 @@ hideNewsletter: true
   {% endif %}
 
   <!-- Chromebooks -->
-  <div id="home__banner" class="wrapper wrapper--padded wrapper--full-bleed wrapper__contained banner-interstitial__wrapper">{{ bannerInterstitial(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta, l10n.home.chromebook.modifiers) }}</div>
+  <div id="home__banner">{{ bannerInterstitial(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta, l10n.home.chromebook.modifiers) }}</div>
 
   <!-- Community -->
   <div id="home__community" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
