Add background 100 update docs

--- a/site/_components/banner-interstitial.njk
+++ b/site/_components/banner-interstitial.njk
@@ -1,5 +1,5 @@
 <!--{#
-  Renders a full-width banner that transitions to a contained banner. Requires a wrapper element with the class `banner-interstitial__wrapper`.
+  Renders a full-width banner that transitions to a contained banner.
 
   @param {object} content: An object containing the following attributes.
   @param {string} content.eyebrow
