--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -40,7 +40,7 @@ hideNewsletter: true
   <div id="home__featured" class="wrapper wrapper__yellow-circle wrapper--padded wrapper--bumper-top wrapper--full-bottom">{{ featuredContent(landingCollections.featured.first , l10n.home.featured.modifiers) }}</div>
   {% endif %}
 
-  <!-- Chromebooks -->
+  <!-- M100 Banner -->
   <div id="home__banner">{{ bannerInterstitial(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta, l10n.home.chromebook.modifiers) }}</div>
 
   <!-- Developers -->
