--- a/site/_layouts/_wrapper.njk
+++ b/site/_layouts/_wrapper.njk
@@ -44,5 +44,6 @@
 
       gtag('config', 'UA-168234575-1');
     </script>
+    <script src="{{ '/js/passthrough/ee.js' | url }}" defer></script>
   </body>
 </html>
