--- a/site/sass/components/_video-card.scss
+++ b/site/sass/components/_video-card.scss
@@ -7,14 +7,11 @@
     overflow: hidden;
     position: relative;
 
+    padding-top: 56.25%;
     // Use the same aspect ratio as YouTube does for thumbnails to minimize letterboxing.
     @supports (aspect-ratio: 16 / 9) {
+      padding-top: 0;
       aspect-ratio: 16 / 9;
-    }
-
-    // Only use padding hack when aspect-ratio isn't supported.
-    @supports not (aspect-ratio: 16 / 9) {
-      padding-top: 56.25%;
     }
 
     .icon {
