--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -24,9 +24,6 @@ hideNewsletter: true
   <!-- Chrome OS Stats -->
   <div id="home__stats" class="wrapper wrapper--padded wrapper--padding">{{ stats(l10n.home.stats.items, l10n.home.stats.modifiers) }}</div>
 
-  <!-- Site Subnav -->
-  <div id="home__subnav" class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded wrapper__background wrapper__contained">{{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}</div>
-
   <!-- Using Chrome OS -->
   <section id="home__using" class="wrapper wrapper--full-top wrapper--full-bottom wrapper--rhythm wrapper--padded" aria-label="{{ l10n.home.onAndWith.desc }}">{% for item in l10n.home.onAndWith.cards %} {{ imageCard(item.images, item.content, item.cta, item.modifiers) }} {% endfor %}</section>
 
@@ -48,6 +45,12 @@ hideNewsletter: true
 
   <!-- Community -->
   <div id="home__community" class="wrapper wrapper--padding wrapper--padded">{{ itemGrid(l10n.home.community.title, l10n.community, l10n.home.community.modifiers) }}</div>
+
+  <!-- Site Subnav -->
+  <div id="home__subnav" class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded wrapper__background wrapper__contained">{{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}</div>
+
+  <!-- Videos -->
+  <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__contained wrapper__background">{{ itemGrid(l10n.home.videos.title, l10n.home.videos.items, l10n.home.videos.modifiers) }}</div>
 
   <!-- Subscribe -->
   <div class="wrapper wrapper--padding wrapper--padded wrapper--full-bleed wrapper__background--dark">{{ callOut(l10n.newsletter.subscribe.content, l10n.newsletter.subscribe.cta) }}</div>
