renamed to stories-section

--- a/site/sass/components/_stories-section.scss
+++ b/site/sass/components/_stories-section.scss
@@ -1,7 +1,7 @@
 // Styles for stories card component.
 @use 'sass:math';
 
-.stories-card {
+.stories-section {
   $max-width: 1160px;
 
   margin: 0 auto;
