--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -86,7 +86,7 @@
 @import 'components/community-quotes';
 @import 'components/card-routing';
 @import 'components/fifty-fifty';
-@import 'components/stories-card';
+@import 'components/stories-section';
 
 // Page Layouts
 @import 'layouts/tech-detail';
